# ipa2wav

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
ipa2wav/data_processing/: __init__.py  data_load.py  harvard_sentences_IPA.txt
ipa2wav/tts_model/: __init__.py  hyperparams.py  modules.py  modules_simplified.py  networks.py  networks_simplified.py  synthesize.py  train.py
ipa2wav/utils/: prepro.py  utils.py
src/data_processing/: data_load.py  harvard_sentences.txt
src/tts_model/: hyperparams.py  modules.py  networks.py  synthesize.py  train.py
src/utils/: __init__.py  utils.py
tests/: conftest.py  evaluate.py  requirements-test.txt  test_data_load.py  test_data_processing.py  test_model_components.py  test_networks.py  test_pytorch_model.py  test_pytorch_synthesis.py  test_synthesize.py  test_utils.py
tests/test_data/: test_sets.json
tests/test_data/reference/: README.md
tests/test_data/text/: README.md  basic_test.txt  complex_test.txt  stress_test.txt
